        * Add hook for alternate replication sources. Obscure, but can be
          nice.

        * Add replicate_order_final_choices hook, so multidc replication may
          pull from the local network if one copy already exists.

        * Fix subtle bugs in process management.

        * Allow overriding of default classes.

2008-08-18: Release version 2.20

        * One more time, and hopefully never again. No changes. META.yml
          fixes.

2008-08-18: Release version 2.19

        * No changes except for META.yml fixes.
          _should_ be able to upload releases without owning half of CPAN.

2008-08-16: Release version 2.18

        * Add repl_use_get_port option (Brian Lynch)

        * Remove tempfile data and rows on create_close (Chaos Wang)

        * Don't delete files accidentally during tempfile table cleanup

        * Specify username to run the mogstored daemon (Jonathan Share)

        * Many spelling errors corrected.

        * PostGres locking routines did not include the hostname for the lock
          release.

        * RFC 2518 says we "should" use a trailing slash when calling
          MKCOL. Some servers (nginx) appears to require it. (Spotted by
          Timu Eren).

        * Add server option 'rebalance_ignore_missing' in mogilefsd config
          that allows the rebalance to ignore files that are already missing
          when it tries to delete them.

        * Fix MultipleHosts replication policy to no longer return desperate
          devices after no longer being desperate, instead returning a state
          which will queue for retries in the future till it can be truly
          happy. This prevents files from being replicated to all writable
          devs when there are two few writable hosts to satisfy the policy.

        * Add --chmod-mountpoints option to mogautomount, in an attempt to
          prevent mogstored machines from accidentally writing to their under-
          lying filesystem.
